namespace SogaRecibos.Domain.Services;
public enum ServiceProvider
{
    Ebsa = 1,
    Vanti = 2,
    Coservicios = 3
}